@@ -419,8 +419,8 @@
             <p>In the second and third forms, with the cactithold: prefix, the plugin
             simply returns either a 0 or 1 for the 'input bandwidth' value. 0 if the
             threshold has not been breached, 1 if it has. You can supply either the
-            internal THold id number for a threshold (not easily visible), the the
-            rra_id and data_id values which can be seen at the end of URLs within THolds
+            internal THold id number for a threshold (not easily visible), or the
+            rra_id and data_id values which can be seen at the end of URLs within THold's
             web pages.</p>
 
             <p>You can provide a similar output to the Monitor plugin by using the
