@@ -3,6 +3,7 @@
         FIXED - memory leak in poller code. Memory usage is MUCH lower now.
         FIXED - NINK colours were exchanged (thanks Deathwing00!)
         FIXED - check-gdbug.php shouldn't complain about empty ob_flush buffers anymore
+        FIXED - SNMP DS should deal better with non-numeric (and blank) return values
         CHANGE - lots of performance optimisations. Roughly twice as fast as 0.97a.
         CHANGE - no longer shows .-prefixed files in map config picker
         CHANGE - editor ignores attempts to rename nodes to have space in names
